# eary

./: .gitignore  .sample.env  README.md  app.py  pyproject.toml
templates/: index.html
